<resources>
    <string name="app_name">StoryShareAPP</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="textView1_signIn">Inicio sesión</string>
    <string name="textView2_signIn">Usuario</string>
    <string name="textView3_signIn">Contraseña</string>
    <string name="textView4_signIn">¿olvidaste tu contraseña o nombre de usuario?</string>
    <string name="textView5_signIn">Recupérala</string>
    <string name="editText1_signIn">Usuario</string>
    <string name="editText2_signIn">Contraseña</string>
    <string name="button1_signIn">Inicia Sesión</string>
    <string name="button2_signIn">Aquí</string>
    <string name="button3_signIn">¿No tienes cuenta?</string>
    <string name="button4_signIn">Regístrate</string>
    <string name="button6_signIn">Centro de Ayuda</string>
    <string name="button7_signIn">FAQs</string>

    <string name="textView1_signUp">Registro</string>
    <string name="textView2_signUp">Usuario</string>
    <string name="textView3_signUp">Contraseña</string>
    <string name="textView4_signUp">Repetir contraseña</string>
    <string name="textView5_signUp">Edad</string>
    <string name="textView6_SignUp">Nombre completo</string>
    <string name="textView7_signUp">*La suscripción a StoryShare te permitirá crear nuevos temas, tus propias reuniones y mucho más</string>
    <string name="textView11_SignUp">Correo electrónico</string>
    <string name="editText1_SignUp">Usuario</string>
    <string name="editText2_SignUp">Contraseña</string>
    <string name="editText3_SignUp">Repetir contraseña</string>
    <string name="editText4_SignUp">Edad</string>
    <string name="editText5_SignUp">Nombre completo</string>
    <string name="editText6_SignUp">Correo electrónico</string>
    <string name="radioButton1_signUp">Cuenta Freemium</string>
    <string name="radioButton2_signUp">"Suscripción a StoryShare por 4'99€/ mes"</string>
    <string name="button1_signUp">Regístrate</string>
    <string name="button2_signUp">Centro de Ayuda</string>
    <string name="button3_signUp">FAQs</string>


    <string name="textView1_home">Buscar</string>
    <string name="textView2_home">Favoritos</string>
    <string name="textView3_home">Eventos</string>
    <string name="textView4_home">Perfil</string>
    <string name="textView5_home">Foros más activos</string>
    <string name="textView22_home">Próximas reuniones</string>
    <string name="textView23_home">Foros abiertos recientemente</string>
    <string name="button1_home">Centro de Ayuda</string>
    <string name="button30_home">FAQs</string>
    <string name="button8_home">Solicita tu libro</string>


    <string name="textView1_forum">Buscar</string>
    <string name="textView2_forum">Favoritos</string>
    <string name="textView3_forum">Eventos</string>
    <string name="textView4_forum">Perfil</string>
    <string name="textView5_forum">Foros</string>
    <string name="button10_forum">Crear nuevo tema</string>
    <string name="button1_forum">Centro de Ayuda</string>
    <string name="button8_forum">FAQs</string>
    <string name="button8a_forum">Solicita tu libro</string>


    <string name="editText1_reunion">Buscar</string>
    <string name="textView1_reunion">Favoritos</string>
    <string name="textView2_reunion">Eventos</string>
    <string name="textView3_reunion">Perfil</string>
    <string name="textView4_reunion">Reunion</string>
    <string name="textView5_reunion">Titulo:</string>
    <string name="textView6_reunion">Autor:</string>
    <string name="textView7_reunion">Datos del evento</string>
    <string name="textView8_reunion">Nombre</string>
    <string name="textView9_reunion">Nombre</string>
    <string name="textView10_reunion">Fecha</string>
    <string name="textView11_reunion">Fecha</string>
    <string name="textView12_reunion">Hora</string>
    <string name="textView13_reunion">Hora</string>
    <string name="button1_reunion">Centro de Ayuda</string>
    <string name="button2_reunion">FAQs</string>
    <string name="button3_reunion">Solicita tu libro</string>
    <string name="button4_reunion">Unirse a la reunión en Discord</string>
    <string name="button5_reunion">Programar una nueva reunión</string>

    <string name="editText1_info_book">Buscar</string>
    <string name="textView2_info_book">Favoritos</string>
    <string name="textView3_info_book">Eventos</string>
    <string name="textView4_info_book">Perfil</string>
    <string name="textView5_info_book">Nombre del libro</string>
    <string name="textView9_infoBook">Titulo:</string>
    <string name="textView10_infoBook">Titulo:</string>
    <string name="textView11_infoBook">Autor:</string>
    <string name="textView12_infoBook">Autor:</string>
    <string name="textView13_infoBook">Próximo evento</string>
    <string name="textView14_infoBook">Día:</string>
    <string name="textView15_infoBook">Día:</string>
    <string name="textView16_info_book">Hora:</string>
    <string name="textView17_info_book">Hora:</string>
    <string name="button1_info_book">Centro de Ayuda</string>
    <string name="button2_info_book">FAQs</string>
    <string name="button3_info_book">Solicita tu libro</string>
    <string name="button9_info_book">Acceder al foro</string>
    <string name="button10_info_book">Crear Evento</string>
    <string name="button11_info_book">IR</string>

    <string name="textView16_favoritos">Buscar</string>
    <string name="textView18_favoritos">Favoritos</string>
    <string name="textView19_favoritos">Eventos</string>
    <string name="textView20_favoritos">Perfil</string>
    <string name="textView21_favoritos">Tus libros favoritos</string>
    <string name="button9_favoritos">Centro de ayuda</string>
    <string name="button10_favoritos">Faqs</string>
    <string name="button11_favoritos">Solicitud de libro</string>




    <string name="editText4_buscador">Buscar</string>
    <string name="textView2_buscador">Favoritos</string>
    <string name="textView3_buscador">Eventos</string>
    <string name="textView4_buscador">Perfil</string>
    <string name="textView5_buscador">Listado de Libros</string>
    <string name="button1_buscador">Centro de Ayuda</string>
    <string name="button7_buscador">FAQs</string>
    <string name="button8_buscador">Solicita tu libro</string>

    <string name="textView16_crearevento">Buscar</string>
    <string name="textView18_crearevento">Favoritos</string>
    <string name="textView19_crearevento">Eventos</string>
    <string name="textView20_crearevento">Perfil</string>
    <string name="textView0_crearevento">Nuevo evento</string>
    <string name="textView13a_crearevento">Nombre</string>
    <string name="textView13b_crearevento">Nombre</string>
    <string name="textView14_crearevento">Fecha</string>
    <string name="textView14a_crearevento">Fecha</string>
    <string name="textView10_crearevento">Hora</string>
    <string name="editTextText2_creareventos">Hora</string>
    <string name="textView9_crearevento">Libro</string>
    <string name="textView22_crearevento">Libro</string>
    <string name="button1_crearvento">Crear Evento</string>
    <string name="button9_crearvento">Centro de Ayuda</string>
    <string name="button30_crearvento">FAQs</string>
    <string name="button10_crearvento">Solicita tu libro</string>

    <string name="textView16_theme">Buscar</string>
    <string name="textView18_theme">Favoritos</string>
    <string name="textView19_theme">Eventos</string>
    <string name="textView20_theme">Perfil</string>
    <string name="textView21_theme">Nuevo tema</string>
    <string name="textView1_theme">Nombre</string>
    <string name="nombre1_event_them">Nombre</string>
    <string name="textView2_theme">Fecha</string>
    <string name="fecha_theme">Fecha</string>
    <string name="textView3_theme">Libro</string>
    <string name="libro_event_theme">Libro</string>
    <string name="button1_theme">Crear Tema</string>
    <string name="button9_theme">Centro de Ayuda</string>
    <string name="button10_theme">FAQs</string>
    <string name="button11_theme">Solicita tu libro</string>

    <string name="editText0_profile">Buscar</string>
    <string name="textView2_profile">Favoritos</string>
    <string name="textView3_profile">Eventos</string>
    <string name="textView4_profile">Perfil</string>
    <string name="textView5b_profile">Modificar los datos del perfil</string>
    <string name="textView5c_profile">Eliminar Cuenta</string>
    <string name="textView8_profile">Usuario</string>
    <string name="caja_text2_profil">Usuario</string>
    <string name="textView9_profile">Edad</string>
    <string name="caja_text3_profile">Edad</string>
    <string name="caja_text4_profile">Nombre Completo</string>
    <string name="textView10_profile">Nombre Completo</string>
    <string name="textView11_profile">Cambiar Contraseña</string>
    <string name="caja_text5_profile">Introducir contraseña</string>
    <string name="textView12_profile">Repetir Contraseña</string>
    <string name="caja_text6_profile">Repetir Contraseña</string>
    <string name="button10a_profile">Cancelar</string>
    <string name="button11a_profile">Guardar</string>
       <string name="button10_profile">Centro de Ayuda</string>
    <string name="button11_profile">FAQs</string>
    <string name="button3_profile">Solicita tu libro</string>

    <string name="textView16_evento">Buscar</string>
    <string name="textView9_eventos">Favoritos</string>
    <string name="textView10_eventos">Eventos</string>
    <string name="textView20_eventos">Perfil</string>
    <string name="textView0_eventos">Próximos eventos en tu lista</string>
    <string name="button9">Centro de Ayuda</string>
    <string name="button30">FAQs</string>
    <string name="button10">Solicita tu libro</string>

</resources>