<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.SignUpActivity">

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="394dp"
        android:layout_height="97dp"
        android:background="#F4EEE1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="156dp"
            android:layout_height="63dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="20sp"
            android:layout_marginRight="25sp"
            android:layout_marginBottom="20sp"
            app:srcCompat="@drawable/logo_transparente" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView1_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/textView1_signUp"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout1" />

    <TextView
        android:id="@+id/textView2_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/textView2_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1_signUp" />

    <EditText
        android:id="@+id/editText1_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/editText1_SignUp"
        android:inputType="text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2_signUp" />

    <TextView
        android:id="@+id/textView3_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/textView3_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1_SignUp" />

    <EditText
        android:id="@+id/editText2_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/editText2_SignUp"
        android:inputType="text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3_signUp" />

    <TextView
        android:id="@+id/textView4_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:text="@string/textView4_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2_SignUp" />

    <EditText
        android:id="@+id/editText3_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/editText3_SignUp"
        android:inputType="text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4_signUp" />

    <TextView
        android:id="@+id/textView5_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/textView5_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3_SignUp" />

    <EditText
        android:id="@+id/editText4_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/editText4_SignUp"
        android:inputType="text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5_signUp" />

    <TextView
        android:id="@+id/textView6_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/textView6_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4_SignUp" />

    <EditText
        android:id="@+id/editText5_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/editText5_SignUp"
        android:inputType="text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6_SignUp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="315dp"
        android:layout_height="44dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6_SignUp">

        <RadioButton
            android:id="@+id/radioButton1_signUp"
            android:layout_width="match_parent"
            android:layout_height="22dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/radioButton1_signUp"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButton2_signUp"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/radioButton2_signUp"
            android:textSize="12sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView7_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="45dp"
        android:text="@string/textView7_signUp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/button1_signUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="12dp"
        android:background="#6D8B89"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/button1_signUp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout2.1"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:background="#A5C3A7"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:fontFamily="@font/quicksand_medium"
                android:text="@string/button2_signUp"
                android:textAlignment="textEnd"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/textView8_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_medium"
                android:text="|"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="8sp" />

            <Button
                android:id="@+id/button3_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:text="@string/button3_signUp"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="8sp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="0dp"
        android:layout_height="29dp"
        android:background="#6D8B89"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

    <TextView
        android:id="@+id/textView11_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/textView11_SignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5_SignUp" />

    <EditText
        android:id="@+id/editText6_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/editText6_SignUp"
        android:inputType="text"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11_SignUp" />

</androidx.constraintlayout.widget.ConstraintLayout>